[project]
name = "talentiq-ai-assistant-langgraph-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]
