[project]
name = "talentiq-ai-assistant-langgraph-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.49.0",
]

[tool.ruff]
# Target Python version
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",

    # Pyflakes
    "F",

    # isort
    "I",

    # pyupgrade
    "UP",

    # flake8-bugbear
    "B",

    # simplify
    "SIM",

    # comprehensions
    "C4",

    # PEP8 naming
    "N",

    # return statements
    "RET",

    # unnecessary code
    "RUF",
]
ignore = [
    # handled by formatter
    "E501",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.lint.isort]
combine-as-imports = true
